--- a/.github/workflows/dockertests.yml
+++ b/.github/workflows/dockertests.yml
@@ -35,6 +35,48 @@ jobs:
         run: |
           pip install -r requirements-dev.txt
 
+  test_docker-dev:
+    name: Test Docker For Development
+    runs-on: ubuntu-latest
+    needs: cache
+    strategy:
+      matrix:
+        python-version: [3.9]
+
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Start MotoServer
+      run: |
+        python setup.py sdist
+        make docker-dev
+    - name: Get pip cache dir
+      id: pip-cache
+      run: |
+        echo "::set-output name=dir::$(pip cache dir)"
+    - name: pip cache
+      uses: actions/cache@v2
+      with:
+        path: ${{ steps.pip-cache.outputs.dir }}
+        key: pip-${{ matrix.python-version }}-${{ hashFiles('**/setup.py') }}
+    - name: Update pip
+      run: |
+        python -m pip install --upgrade pip
+    - name: Install project dependencies
+      run: |
+        pip install -r requirements-dev.txt
+    - name: Test
+      env:
+        TEST_SERVER_MODE: ${{ true }}
+        MOTO_PORT: 5000
+      run: |
+        pytest -sv tests/test_awslambda/test_lambda_invoke.py::test_invoke_lambda_using_environment_port tests/test_cloudformation/test_cloudformation_custom_resources.py
+
   test_custom_port:
     name: Test Custom Port
     runs-on: ubuntu-latest
