--- a/.github/workflows/test_outdated_versions.yml
+++ b/.github/workflows/test_outdated_versions.yml
@@ -16,7 +16,7 @@ jobs:
         python-version: [ "3.10" ]
         responses-version: ["0.13.0", "0.15.0", "0.17.0", "0.19.0", "0.20.0" ]
         mock-version: [ "3.0.5", "4.0.0", "4.0.3" ]
-        werkzeug-version: ["2.0.1", "2.1.1"]
+        werkzeug-version: ["2.0.1", "2.1.1", "2.2.2"]
         openapi-spec-validator-version: ["0.4.0", "0.5.0"]
 
     steps:
