--- a/.github/workflows/test_terraform.yml
+++ b/.github/workflows/test_terraform.yml
@@ -16,6 +16,7 @@ jobs:
       matrix:
         service: ${{ fromJson(needs.prepare_list.outputs.matrix) }}
         go-version: [1.18.x]
+        python-version: [3.8]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
