--- a/setup.cfg
+++ b/setup.cfg
@@ -15,4 +15,4 @@ ignore-paths=moto/packages
 [pylint.'MESSAGES CONTROL']
 disable = W,C,R,E
 # future sensible checks = super-init-not-called, unspecified-encoding, undefined-loop-variable
-enable = arguments-renamed, dangerous-default-value, deprecated-module, function-redefined, import-self, redefined-builtin, redefined-outer-name, reimported, pointless-statement, super-with-arguments, unused-argument, unused-import, unused-variable, useless-else-on-loop, wildcard-import
+enable = anomalous-backslash-in-string, arguments-renamed, dangerous-default-value, deprecated-module, function-redefined, import-self, redefined-builtin, redefined-outer-name, reimported, pointless-statement, super-with-arguments, unused-argument, unused-import, unused-variable, useless-else-on-loop, wildcard-import
