--- a/setup.cfg
+++ b/setup.cfg
@@ -18,9 +18,10 @@ disable = W,C,R,E
 enable = anomalous-backslash-in-string, arguments-renamed, dangerous-default-value, deprecated-module, function-redefined, import-self, redefined-builtin, redefined-outer-name, reimported, pointless-statement, super-with-arguments, unused-argument, unused-import, unused-variable, useless-else-on-loop, wildcard-import
 
 [mypy]
-exclude = tests
+files= moto/acm,moto/amp,moto/apigateway,moto/applicationautoscaling/
 show_column_numbers=True
 show_error_codes = True
+disable_error_code=abstract
 
 disallow_any_unimported=False
 disallow_any_expr=False
