--- a/.github/workflows/dockertests.yml
+++ b/.github/workflows/dockertests.yml
@@ -53,7 +53,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Start MotoServer on an unusual port
       run: |
-        python setup.py sdist
+        pip install --upgrade build
+        python -m build
         docker run --rm -t --name motoserver -e TEST_SERVER_MODE=true -e AWS_SECRET_ACCESS_KEY=server_secret -e MOTO_PORT=4555 -e AWS_ACCESS_KEY_ID=server_key -v `pwd`:/moto -p 4555:4555 -v /var/run/docker.sock:/var/run/docker.sock python:3.7-buster /moto/scripts/ci_moto_server.sh &
         MOTO_PORT=4555 python scripts/ci_wait_for_server.py
     - name: Get pip cache dir
@@ -111,7 +112,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Start MotoServer on a custom Docker network bridge
       run: |
-        python setup.py sdist
+        pip install --upgrade build
+        python -m build
         docker network create -d bridge my-custom-network
         docker run --rm -t -e TEST_SERVER_MODE=true -e MOTO_DOCKER_NETWORK_NAME=my-custom-network -e AWS_SECRET_ACCESS_KEY=server_secret -e AWS_ACCESS_KEY_ID=server_key -v `pwd`:/moto -p 5000:5000 --network my-custom-network -v /var/run/docker.sock:/var/run/docker.sock python:3.7-buster /moto/scripts/ci_moto_server.sh &
         python scripts/ci_wait_for_server.py
@@ -168,7 +170,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Start MotoServer on an unusual port
       run: |
-        python setup.py sdist
+        pip install --upgrade build
+        python -m build
         docker run --rm -t -e MOTO_DOCKER_NETWORK_MODE=host -e TEST_SERVER_MODE=true -e AWS_SECRET_ACCESS_KEY=server_secret -e MOTO_PORT=4555 -e AWS_ACCESS_KEY_ID=server_key -v `pwd`:/moto -p 4555:4555 -v /var/run/docker.sock:/var/run/docker.sock python:3.7-buster /moto/scripts/ci_moto_server.sh &
         MOTO_PORT=4555 python scripts/ci_wait_for_server.py
     - name: Get pip cache dir
